# llvm-porting

./: .travis.yml  CMakeLists.txt  README.md
include/llvm/ADT/: Triple.h
include/llvm/MC/: MCExpr.h
include/llvm/Support/: ELF.h
lib/MC/: MCExpr.cpp
lib/Support/: Triple.cpp
toytests/: CMakeLists.txt  basic.ll  regression.sh
toytests/basic/: basic.c  basic.ll  basic_verifier.cpp
toytests/decrement_loop/: decrement_loop.c  decrement_loop.ll  decrement_loop_verifier.cpp
toytests/if_else/: if_else.c  if_else.ll
toytests/loop/: loop.c  loop.ll  loop_verifier.cpp
toytests/loop_loop/: loop_loop.c  loop_loop.ll  loop_loop_verifier.cpp
